Add the ability to post a whole CSV of cards
